[package]
name = "childrens-impact-on-generational-wealth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
lerp = "0.5.0"
rand = "0.8.5"
textplots = "0.8.4"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "childrens-impact-on-generational-wealth"
path = "src/main.rs"

